--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
 <body>
     <div class="container">
         <div class="wrapper">
-            <p id="pertanyaan"></p>
-            <div class="row">
-                <input id="jawaban" type="text" placeholder="Silahkan Jawab" />
-                <button onclick="botStart()">SEND</button>
+            <div class="content">
+                <p id="pertanyaan"></p>
+                <div class="row">
+                    <input id="jawaban" type="text" placeholder="Silahkan Jawab" />
+                    <button onclick="botStart()">SEND</button>
+                </div>
             </div>
         </div>
     </div>
+    <div id="loaders"></div>
     <script src="bot.js"></script>
 </body>
 
